--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-router": "^5.1.20",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
